WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
188131
Adjust the color matrix for the inverse apple-invert-lightness() transformation
https://bugs.webkit.org/show_bug.cgi?id=188131
Summary
Adjust the color matrix for the inverse apple-invert-lightness() transformation
Simon Fraser (smfr)
Reported
2018-07-27 16:24:40 PDT
Adjust the color matrix for the inverse apple-invert-lightness() transformation
Attachments
Patch
(28.80 KB, patch)
2018-07-27 16:26 PDT
,
Simon Fraser (smfr)
zalan
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2018-07-27 16:26:18 PDT
Created
attachment 345968
[details]
Patch
Simon Fraser (smfr)
Comment 2
2018-07-27 16:26:51 PDT
rdar://problem/42673070
alan
Comment 3
2018-07-27 16:27:50 PDT
Comment on
attachment 345968
[details]
Patch rs=me
EWS Watchlist
Comment 4
2018-07-27 16:29:16 PDT
Attachment 345968
[details]
did not pass style-queue: ERROR: Source/WebCore/platform/graphics/filters/FilterOperation.cpp:264: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] Total errors found: 1 in 8 files If any of these errors are false positives, please file a bug against check-webkit-style.
Simon Fraser (smfr)
Comment 5
2018-07-27 17:35:44 PDT
https://trac.webkit.org/changeset/234340/webkit
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug