Adjust the color matrix for the inverse apple-invert-lightness() transformation https://bugs.webkit.org/show_bug.cgi?id=188131 rdar://problem/42673070

Reviewed by Zalan Bujtas.

Source/WebCore:

Use the correct inverse matrix values.

Test: editing/style/inverse-color-filter.html

* platform/graphics/filters/FilterOperation.cpp:
(WebCore::InvertLightnessFilterOperation::inverseTransformColor const):

LayoutTests:

Rebaseline tests that use the filter inversion. Add a new test that does inversion
for a whole range of colors, to get good coverage of the inversion matrix.

* editing/style/inverse-color-filter-expected.txt: Added.
* editing/style/inverse-color-filter.html: Added.
* editing/style/set-backColor-with-color-filter-expected.txt:
* editing/style/set-foreColor-with-color-filter-expected.txt:
* platform/win/TestExpectations:

Canonical link: https://commits.webkit.org/203259@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@234340 268f45cc-cd09-0410-ab3c-d52691b4dbfc